[tool.poetry]
name = "opsipxeconfd"
version = "4.3.0.3"
description = "opsi pxe configuration service"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
maintainers = ["uib GmbH <info@uib.de>"]
authors = ["uib GmbH <info@uib.de>"]
include = [
    "run-opsipxeconfd",
    "opsipxeconfd_data/**/*"
]

[[tool.poetry.source]]
name = "uibpypi"
url = "http://pypi.uib.gmbh:8080/simple"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-opsi-common = "^4.3.0.2"
inotify = "^0.2.10"
configargparse = "^1.5.3"

[tool.poetry.scripts]
opsipxeconfd = "opsipxeconfd.__main__:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.243"
pytest = "^7.2"
pytest-cov = "^4.0"
pyinstaller = "^5.5"
pylint = "^2.12"
tan = "^22.8"
mypy = "^0.991"

[tool.black]
line-length = 140
target-version = ['py39', 'py310']
use-tabs = true

[tool.ruff]
line-length = 140

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
follow_imports = "silent"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
