[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "opsipxeconfd"
version = "4.3.2.1"
description = "opsi pxe configuration service"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
maintainers = [ "uib GmbH <info@uib.de>",]
authors = [ "uib GmbH <info@uib.de>",]
include = [ "run-opsipxeconfd", "opsipxeconfd_data/**/*",]
[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "uibpypi"
url = "http://pypi.uib.gmbh:8080/simple"

[tool.ruff]
line-length = 140

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
follow_imports = "silent"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-opsi-common = "^4.3.1.0"
inotify = "^0.2.10"
configargparse = "^1.5.3"
passlib = "^1.7.4"

[tool.poetry.scripts]
opsipxeconfd = "opsipxeconfd.__main__:main"

[tool.ruff.format]
indent-style = "tab"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1"
pytest = "^7.2"
pytest-cov = "^4.0"
pyinstaller = "^6.2"
pylint = "^3.0"
mypy = "^1.7"
