[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "opsipxeconfd"
version = "4.3.3.1"
description = "opsi pxe configuration service"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
maintainers = [ "uib GmbH <info@uib.de>",]
authors = [ "uib GmbH <info@uib.de>",]
include = [ "run-opsipxeconfd", "opsipxeconfd_data/**/*",]
[[tool.poetry.source]]
name = "uibpypi"
url = "https://pypi.uib.gmbh/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[tool.ruff]
line-length = 140

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
follow_imports = "silent"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-opsi-common = ">=4.3.3,<4.4"
inotify = "^0.2"
configargparse = "^1.5"
passlib = "^1.7"

[tool.poetry.scripts]
opsipxeconfd = "opsipxeconfd.__main__:main"

[tool.ruff.format]
indent-style = "tab"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3"
pytest = "^8.1"
pytest-cov = "^4.0"
pyinstaller = "^6.2"
mypy = "^1.7"
